--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ PORT=3000
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=root
-DB_NAME=control_usuarios
+DB_NAME=pedalazo
+
+JWT_SECRET=miclaveultrasecreta123
